--- a/index.html
+++ b/index.html
@@ -3,13 +3,41 @@
     <head>
         <title>Mayk Brito</title>
 
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
         <style>
+            * {
+                margin: 0;
+                padding: 0;
+                border: 0;
+            }
             body {
                 background: #282a36;
+                font-family: 'Source Sans Pro', sans-serif;
             }
             header {
                 padding: 32px;
+                border-bottom: 1px solid #333;
+                background: rgba(0, 0, 0, 0.1)
             }
+
+            header div {
+                text-align: center;
+            }
+
+            header div a {
+                color: white;
+                font-size: 18px;
+                line-height: 28px;
+                margin: 0 16px;
+                padding-bottom: 3px;
+                text-decoration: none;
+            }
+
+            header div a:hover {
+                color: #50fa7b;
+                transition: color 200ms;
+            }
+
         </style>
     </head>
     <body>
