--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <div>
+            <div class="links">
                 <a href="/">Sobre</a>
                 <a href="/">Aulas</a>
             </div>
@@ -18,6 +18,12 @@
             <h1>Mayk Brito</h1>
             <h2>Instrutor - Rocketseat</h2>
             <p>Programador full-stack, focado em trazer o melhor ensino para iniciantes em programação. Colaborador da <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a></p>
+        </div>
+
+        <div id="links-footer" class="links">
+            <a href="https://github.com/maykbrito/" target="_blank">Github</a>
+            <a href="https://twitter.com/maykbrito/" target="_blank">Twitter</a>
+            <a href="https://www.linkedin.com/in/maykbrito/" target="_blank">Linkedin</a>
         </div>
     </body>
 </html>
