--- a/classes.html
+++ b/classes.html
@@ -3,13 +3,15 @@
     <head>
         <title>Mayk Brito</title>
 
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
             <div class="links">
-                <a href="/">Sobre</a>
-                <a href="/">Aulas</a>
+                <a href="index.html">Sobre</a>
+                <a href="classes.html">Aulas</a>
             </div>
         </header>
 
@@ -34,70 +36,83 @@
 
            <div class="card">
                 <div class="card__image-container">
-                    <img src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg" alt="Video Aula">
+                    <img src="https://img.youtube.com/vi/HN1UjzRSdBk/maxresdefault.jpg" alt="Video Aula">
                 </div>
                 <div class="card__content">
-                    <p>Formulário Animado com JS puro e CSS Animation | Mayk Brito</p>
+                    <p>Desvendando o CSS Grid na prática | Mayk Brito</p>
                 </div>
                 <div class="card__info">
-                    <p>57 min</p>
+                    <p>36 min</p>
                     <p class="card__price">Free</p>
                 </div>
            </div>
 
            <div class="card">
                 <div class="card__image-container">
-                    <img src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg" alt="Video Aula">
+                    <img src="https://img.youtube.com/vi/rAzHvYnQ8DY/maxresdefault.jpg" alt="Video Aula">
                 </div>
                 <div class="card__content">
-                    <p>Formulário Animado com JS puro e CSS Animation | Mayk Brito</p>
+                    <p>Array: Higher Order Functions | Mayk Brito</p>
                 </div>
                 <div class="card__info">
-                    <p>57 min</p>
+                    <p>54 min</p>
                     <p class="card__price">Free</p>
                 </div>
            </div>
 
            <div class="card">
                 <div class="card__image-container">
-                    <img src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg" alt="Video Aula">
+                    <img src="https://img.youtube.com/vi/ghTrp1x_1As/maxresdefault.jpg" alt="Video Aula">
                 </div>
                 <div class="card__content">
-                    <p>Formulário Animado com JS puro e CSS Animation | Mayk Brito</p>
+                    <p>O que é API? REST e RESTful? | Mayk Brito</p>
                 </div>
                 <div class="card__info">
-                    <p>57 min</p>
+                    <p>33 min</p>
                     <p class="card__price">Free</p>
                 </div>
            </div>
 
            <div class="card">
                 <div class="card__image-container">
-                    <img src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg" alt="Video Aula">
+                    <img src="https://img.youtube.com/vi/GSqR2i-Pq6o/maxresdefault.jpg" alt="Video Aula">
                 </div>
                 <div class="card__content">
-                    <p>Formulário Animado com JS puro e CSS Animation | Mayk Brito</p>
+                    <p>Desvendando a variável this no Javascript | Mayk Brito</p>
                 </div>
                 <div class="card__info">
-                    <p>57 min</p>
+                    <p>48 min</p>
                     <p class="card__price">Free</p>
                 </div>
            </div>
 
            <div class="card">
                 <div class="card__image-container">
-                    <img src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg" alt="Video Aula">
+                    <img src="https://img.youtube.com/vi/2alg7MQ6_sI/maxresdefault.jpg" alt="Video Aula">
                 </div>
                 <div class="card__content">
-                    <p>Formulário Animado com JS puro e CSS Animation | Mayk Brito</p>
+                    <p>Como usar Git e Github na prática: Guia para iniciantes | Mayk Brito</p>
                 </div>
                 <div class="card__info">
-                    <p>57 min</p>
+                    <p>33 min</p>
                     <p class="card__price">Free</p>
                 </div>
            </div>
 
         </section>
+
+
+        <div class="modal-overlay">
+            <div class="modal">
+                <a class="close-modal">
+                    <i class="material-icons">close</i>
+                </a>
+
+                <div class="modal-content">
+                    <!-- video aqui -->
+                </div>
+            </div>
+        </div>
         
     </body>
 </html>
