--- a/classes.html
+++ b/classes.html
@@ -113,6 +113,8 @@
                 </div>
             </div>
         </div>
+
+        <script src="scripts.js"></script>
         
     </body>
 </html>
