08 - Iframe Video Dinamico

--- a/classes.html
+++ b/classes.html
@@ -21,7 +21,7 @@
 
         <section class="cards">
 
-           <div class="card">
+           <div class="card" id="GykTLqODQuU">
                 <div class="card__image-container">
                     <img src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg" alt="Video Aula">
                 </div>
@@ -34,7 +34,7 @@
                 </div>
            </div>
 
-           <div class="card">
+           <div class="card" id="HN1UjzRSdBk">
                 <div class="card__image-container">
                     <img src="https://img.youtube.com/vi/HN1UjzRSdBk/maxresdefault.jpg" alt="Video Aula">
                 </div>
@@ -47,7 +47,7 @@
                 </div>
            </div>
 
-           <div class="card">
+           <div class="card" id="rAzHvYnQ8DY">
                 <div class="card__image-container">
                     <img src="https://img.youtube.com/vi/rAzHvYnQ8DY/maxresdefault.jpg" alt="Video Aula">
                 </div>
@@ -60,7 +60,7 @@
                 </div>
            </div>
 
-           <div class="card">
+           <div class="card" id="ghTrp1x_1As">
                 <div class="card__image-container">
                     <img src="https://img.youtube.com/vi/ghTrp1x_1As/maxresdefault.jpg" alt="Video Aula">
                 </div>
@@ -73,7 +73,7 @@
                 </div>
            </div>
 
-           <div class="card">
+           <div class="card" id="GSqR2i-Pq6o">
                 <div class="card__image-container">
                     <img src="https://img.youtube.com/vi/GSqR2i-Pq6o/maxresdefault.jpg" alt="Video Aula">
                 </div>
@@ -86,7 +86,7 @@
                 </div>
            </div>
 
-           <div class="card">
+           <div class="card" id="2alg7MQ6_sI">
                 <div class="card__image-container">
                     <img src="https://img.youtube.com/vi/2alg7MQ6_sI/maxresdefault.jpg" alt="Video Aula">
                 </div>
@@ -109,7 +109,7 @@
                 </a>
 
                 <div class="modal-content">
-                    <!-- video aqui -->
+                    <iframe src="" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
